--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,10 @@ services:
       dockerfile: ./coderx.Dockerfile
     expose:
      - "5000"
+    environment: 
+      - FLASK_DEBUG=1
+    volumes:
+      - "~/CodeRx/components/CodeRx:/code/CodeRx"
 
   redis:
     image: "redis:alpine"
