--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
   db:
     image: postgres:11.2-alpine
     restart: always
-    # ports:
-    #   - "5432:5432"
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_PASSWORD: CodeRxYourDailyDoseOfCode
       #Password is for development use only, will use docker secrets going forward
