--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,20 +10,26 @@ services:
       - FLASK_DEBUG=1
     volumes:
       - "./components/application/CodeRx:/code/CodeRx"
+    networks:
+      - default
 
   redis:
     image: "redis:alpine"
+    networks:
+      - default
 
   db:
     image: postgres:11.2-alpine
     restart: always
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     environment:
       POSTGRES_PASSWORD: CodeRxYourDailyDoseOfCode
       #Password is for development use only, will use docker secrets going forward
     volumes:
       - "dbdata:/var/lib/postgresql/data"
+    networks:
+      - default
 
   nginx:
     depends_on:
@@ -34,6 +40,8 @@ services:
     # restart: always
     ports:
      - "80:80"
+    networks:
+      - default
 
 volumes:
   dbdata:
