--- a/components/proxy/nginx.conf
+++ b/components/proxy/nginx.conf
@@ -1,10 +1,17 @@
-worker_processes 1;
+worker_processes 4;
 
 events { worker_connections 1024; }
 
 http {
 
     server {
+        include       /etc/nginx/mime.types;
+
+        root /www;
+
+        location /static/ {
+            
+        }        
 
         location / {
             proxy_pass         http://web:5000;
