Added xterm. Created worker script and container for it. Created test task script

--- a/components/application/CodeRx/static/package.json
+++ b/components/application/CodeRx/static/package.json
@@ -9,6 +9,7 @@
   "author": "We Are #1",
   "license": "MIT",
   "dependencies": {
-    "monaco-editor": "^0.16.0"
+    "monaco-editor": "^0.16.0",
+    "xterm": "^3.12.0"
   }
 }
