--- a/components/proxy/nginx.conf
+++ b/components/proxy/nginx.conf
@@ -12,6 +12,15 @@ http {
         location /static/ {
         }        
 
+        location /api {
+            proxy_pass         http://api:4520;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Host $server_name;
+        }
+
         location / {
             proxy_pass         http://web:5000;
             proxy_redirect     off;
