--- a/components/proxy/nginx.conf
+++ b/components/proxy/nginx.conf
@@ -4,13 +4,29 @@ events { worker_connections 1024; }
 
 http {
 
+    # upstream socketio_nodes {
+    #   ip_hash;
+    #   server web:5000;
+    # }
+
     server {
         include       /etc/nginx/mime.types;
+        server_name _;
 
         root /www;
 
         location /static/ {
-        }        
+        }      
+
+        # location /socket.io/ {
+            
+        #     proxy_pass http://web:5000/socket.io/;
+        #     proxy_http_version 1.1;
+        #     proxy_set_header Upgrade $http_upgrade;
+        #     proxy_set_header Connection "upgrade";
+        #     proxy_set_header Host $host;
+        # }
+  
 
         location /api {
             proxy_pass         http://api:4520;
@@ -28,6 +44,9 @@ http {
             proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   X-Forwarded-Host $server_name;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
         }
     }
 
