--- a/components/proxy/nginx.conf
+++ b/components/proxy/nginx.conf
@@ -18,14 +18,14 @@ http {
         location /static/ {
         }      
 
-        # location /socket.io/ {
+        location /socket.io/ {
             
-        #     proxy_pass http://web:5000/socket.io/;
-        #     proxy_http_version 1.1;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Connection "upgrade";
-        #     proxy_set_header Host $host;
-        # }
+            proxy_pass http://web:5000/socket.io/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+        }
   
 
         location /api {
@@ -44,9 +44,9 @@ http {
             proxy_set_header   X-Real-IP $remote_addr;
             proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header   X-Forwarded-Host $server_name;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
+            # proxy_set_header Upgrade $http_upgrade;
+            # proxy_set_header Connection "upgrade";
+            # proxy_set_header Host $host;
         }
     }
 
