--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,7 +75,7 @@ services:
     build:
       context: ./components/RECESS/api
       dockerfile: ./api.Dockerfile
-    command: python recess_api.py -p 5672 -s ${RABBIT_HOST_IP}
+    command: python recess_api.py -p 5672 -s broker
     restart: on-failure
     expose:
      - "4520"
@@ -92,7 +92,7 @@ services:
     build:
       context: ./components/RECESS/worker/java
       dockerfile: ./java.Dockerfile
-    command: python worker.py -u ${RABBIT_HOST_IP}
+    command: python worker.py -u broker
     restart: always
     depends_on: 
       - broker
