added name to problem table

--- a/components/proxy/nginx.conf
+++ b/components/proxy/nginx.conf
@@ -6,11 +6,13 @@ http {
 
     server {
         include       /etc/nginx/mime.types;
+        access_log  on;
+        error_log on;
 
         root /www;
 
         location /static/ {
-        }        
+        }
 
         location / {
             proxy_pass         http://web:5000;
