--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       dockerfile: ./coderx.Dockerfile
     expose:
      - "5000"
+    ports:
+     - "5000:5000"
     environment:
       FLASK_DEBUG: 1
       PASSWORD_SALT: ${PASSWORD_SALT}
